OpenZXRom xxxx-xx-xx
- Calculator routines from the ZX81 ROM are incorporated. All pure numeric
  calculator operations and functions are now supported
- Low-level beeper routine ('beeper')

OpenZXRom 2008-01-07
- Additional keyboard scanning / decoding routines: 'key_test' @ 0x031e and
  'key_code' @ 0x0333. Called from interrupt routine, so programs which poll
  'last_key' system variable will now respond to keypresses
- PRINT command implemented ('cmd_print')
- 'cmd_ink', 'cmd_paper' and 'putchar' routines support INK/PAPER 8
  (transparent) and 9 (contrast)
- FLASH and BRIGHT commands implemented ('cmd_flash' / 'cmd_bright'), and
  'putchar' updated to support FLASH/BRIGHT 8 (transparent)
- PAUSE command implemented ('cmd_pause')
- Tape loader outputs an extra newline when the matching block is found
- Workspace / calculator stack is garbage-collected before each statement
- Added 0x053f as an alternate entry point to load_bytes_exit
- Bugfix: PRINT TAB x no longer moves to the next line if cursor is already at
  position x. (Also affected PRINT AT y,0)
- Bugfix: 'clear_screen' leaves temporary attributes unchanged
- Bugfix: White border on startup is set as a permanent border colour (via
  'set_border')

OpenZXRom 2007-12-31
- Routine to allocate arbitrary space in memory ('alloc_space')
- LOAD command implemented ('cmd_load') (except DATA)
- 'cmd_border' moved to 0x2298 to provide 'set_border' entry point at 0x229b
  (used by various Jonathan Cauldwell games)
- Character printing supports comma control (CHR$ 6)
- Character printing supports flash / bright controls (CHR$ 18 and 19)
- Character printing supports user-defined graphics
- Implemented 'border_colour' system variable to preserve border colour after
  tape loading
- Fatal errors now output diagnostic messages
- Bugfix: parameter to CLEAR is not lost during call to clear_screen
- Bugfix: 'consume' (RST 0x0020) no longer wraps interp_ptr at 256b boundaries