@@ -1,10 +1,17 @@
 Matt Westcott <matt@west.co.tt> , http://matt.west.co.tt
     - Project co-ordinator / main code
+
 Paul van der Laan , http://www.type-invaders.com/
     - Clairsys font
+
 Jan Bobrowski
     - Beeper routine
+
 John Grant, http://www.ninetiles.com/
 	- ZX80 ROM
+
 Steve Vickers, http://www.ninetiles.com/
 	- ZX81 ROM
+
+Rui Tunes, http://www.geocities.com/ruijtunest/
+	- Circle routine
